  [Michele Simionato]
  * Storing the MFDs in TOML format inside the datastore

  [Robin Gee]
  * Moves b4 constant into COEFFS table for GMPE Sharma et al., 2009 

  [Graeme Weatherill]
  * Adds functionality to Cauzzi et al. (2014) and Derras et al. (2014)
    calibrated GMPEs for Germany to use either finite or point source distances

  [Michele Simionato]
  * Restored the ability to associate site model parameters to a grid of sites
  * Made it possible to set `hazard_curves_from_gmfs=true` with
    `ground_motion_fields=false` in the event based hazard calculator
  * Introduced a mechanism to split the tasks based on an estimated duration
  * Integrated `oq plot_memory` into `oq plot`
  * Removed `NaN` values for strike and dip when exporting griddedRuptures
  * Fixed `oq reset` to work in multi-user mode
  * Extended the source_id-filtering feature in the job.ini to multiple sources
  * Supported WKT files for the binary perils in the multi_risk calculator
  * Added an early check on the coefficients of variation and loss ratios of
    vulnerability functions with the Beta distribution
  * Made sure that `oq engine --dc` removes the HDF5 cache file too
  * Removed the flag `optimize_same_id_sources` because it is useless now
  * Introduced a soft limit at 65,536 sites for event_based calculations
  * Fixed a performance regression in ucerf_classical that was filtering
    before splitting, thus becoming extra-slow
  * Improved the progress log, that was delayed for large classical calculations
  * Exported the ruptures as 3D multi-polygons (instead of 2D ones)
  * Changed the `aggregate_by` exports for consistency with the others
  * Changed the losses_by_event exporter for ebrisk, to make it more
    consistent with scenario_risk and event_based_risk
  * Changed the agglosses and losses_by_event exporters in scenario_risk,
    by adding a column with the realization index
  * Changed the generation of the hazard statistics to consume very little
    memory